--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-validation": "^4.1.1",
     "helmet": "^8.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.13.2",
