--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-rate-limit": "^7.5.0",
     "express-validation": "^4.1.1",
     "helmet": "^8.1.0",
+    "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.13.2",
     "winston": "^3.17.0"
